# SIGMOID2024

./: .gitignore  CMakeLists.txt  TER  baseline.cpp  dk.cpp  dummy_read_data.c  main.py  output.txt  requirements.txt  run.sh  submit.sh  test.c
docs/: todo.md
include/: Answer.hpp  DataBase.hpp  DataPoint.hpp  IVF.hpp  IndexIVF.hpp  IndexSAXClustersRange.hpp  IndexSAXTrie.hpp  Kmeans.hpp  Query.hpp  QueryIVF.hpp  QueryQueue.hpp  QueryRangeSAXFilter.hpp  QueryRangeSAXOnly.hpp  QueryRunManager.hpp  QuerySAXLookaround.hpp  QuerySAXTrie.hpp  QuerySeqScan.hpp  QuerySeqScanIncremental.hpp  QuerySeqScanRange.hpp  QuerySeqScanRangeIncremental.hpp  QuerySet.hpp  QueryThreadData.hpp  SAX.hpp  SortUtils.hpp  Utils.hpp  constants.hpp  data.hpp  globals.hpp
notebooks/: utils.py
output/: test
python scripts/: play.ipynb  utils.py
src/: Answer.cpp  DataBase.cpp  DataPoint.cpp  IndexIVF.cpp  IndexSAXClustersRange.cpp  IndexSAXTrie.cpp  Kmeans.cpp  Query.cpp  QueryIVF.cpp  QueryQueue.cpp  QueryRangeSAXFilter.cpp  QueryRangeSAXOnly.cpp  QueryRunManager.cpp  QuerySAXLookaround.cpp  QuerySAXTrie.cpp  QuerySeqScan.cpp  QuerySeqScanIncremental.cpp  QuerySeqScanRange.cpp  QuerySeqScanRangeIncremental.cpp  QuerySet.cpp  QueryThreadData.cpp  SAX.cpp  SortUtils.cpp  Utils.cpp  data.cpp  io.cpp  main.cpp  test_Kmeans.cpp
tests/: gmon.out  kmeans_test.cpp  profile_report.txt  sax.cpp
utils/: io.py
